@@ -277,6 +277,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #27034: Removed deprecated class asynchat.fifo.
+
 - Issue #26870: Added readline.set_auto_history(), which can stop entries
   being automatically added to the history list.  Based on patch by Tyler
   Crompton.
